<resources>
    <string name="app_name">Storia</string>
    <string name="action_home">Home</string>
    <string name="action_search">Search</string>
    <string name="action_books">Library</string>
    <string name="action_write">Write</string>
    <string name="action_notice">Notifications</string>
    <string name="action_category">Category</string>
    <string name="action_account">Account</string>
    <string name="action_login">Login</string>
    <string name="action_logout">Logout</string>
    <string name="action_name_acc">Cao Nguyễn Kỳ Duyên</string>
    <string name="action_gmail_acc">caonguyenkyduyen17@gmail.com</string>
    <string name="nav_open">Navigation Open</string>
    <string name="nav_close">Navigation Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trending_books">Trending Books</string>
    <string name="score">score</string>
    <string name="add_a_cover">Add a cover</string>
    <string name="story_title">Story Title</string>
    <string name="author">Author</string>
    <string name="category">Category</string>
    <string name="status">Status</string>
    <string name="reading_list">Reading List</string>
    <string name="add_books">Add Books</string>
    <string name="add_chapter">Add Chapter</string>
    <string name="chapter_title">Chapter Title</string>
    <string name="choose_category">Choose Category</string>
    <string name="create">Create</string>
    <string name="edit">Edit</string>
    <string name="add_chapter_show_info_book">Add File Books</string>
    <string name="update_book">update book</string>
    <string name="add_chapters">add chapter</string>
    <string name="edit_chapter">edit_chapter</string>
    <string name="delete_books">Delete Books</string>
    <string name="do_you_want_to_remove_the_book_from_your_library">Do you want to remove the book from your library?</string>
    <string name="are_you_sure_delete_your_account">Are you sure Delete Your Account ?</string>
    <string name="are_you_sure_delete_your_books">Are you sure Delete Your Books ?</string>
    <string name="would_you_like_to_save_the_story_to_your_library">Would you like to save the story to your library?</string>
    <string name="are_you_sure_to_publish_books">Are you sure to publish Books?</string>
    <string name="are_you_sure_to_unpublish_books">Are you sure to Unpublish Books?</string>
    <string name="please_let_us_know_the_reason_for_your_report">Please let us know the reason for your report</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="enter_your_email_address_to_retrieve_your_password">Enter your email address to retrieve your password</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="thao_cucu">Thao cucu</string>
    <string name="save">SAVE</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login1">Login</string>
    <string name="harry_potter_v_h_n_t_th_n">Harry Potter và Hòn Đá Phù Thủy</string>
    <string name="are_you_sure_report_book">Are you sure Report Book ?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="select_category">Select Category</string>
    <string name="science_fiction">Science Fiction</string>
    <string name="romantic">Romantic</string>
    <string name="non_fiction">Non-Fiction</string>
    <string name="horror">Horror</string>
    <string name="detective">Detective</string>
    <string name="thriller">Thriller</string>
    <string name="story">Story</string>
    <string name="action">Action</string>
    <string name="sensitive_content">Sensitive content</string>
    <string name="enmity_and_harassment">Enmity and harassment</string>
    <string name="violence">Violence</string>
    <string name="spam">Spam</string>
    <string name="disclosure_of_personal_information">Disclosure of personal information</string>
    <string name="self_harm">Self-harm</string>
    <string name="copyright_infringement">Copyright infringement</string>
    <string name="select_status">Select Status</string>
    <string name="completed">Completed</string>
    <string name="incompleted">Incompleted</string>
    <string name="title">Title</string>
    <string name="thaocucu">thaocucu</string>
    <string name="_12_5k_view">12.5K View</string>
    <string name="_12_5k_vote">12.5K Vote</string>
    <string name="_12_5k_chapter">12.5K Chapter</string>
    <string name="read">Read</string>
    <string name="description">Description</string>
    <string name="choose_status">Choose Status</string>
    <string name="story_description">Story Description</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="rencently">Rencently</string>
    <string name="favourite">Favourite</string>
    <string name="all">All</string>
    <string name="create_a_new_story">Create A New Story</string>
    <string name="edit_another_story">Edit Another Story</string>
    <string name="create_new_story">Create New Story</string>
    <string name="j_k_rowling">J.K Rowling</string>
    <string name="_7_ch_ng">7 chương</string>
    <string name="please_wait">Please Wait...</string>
    <string name="rate_for_the_story">Rate For The Story</string>
    <string name="vote_to_let_us_know_what_you_think_about_this_story">Vote to let us know what you think about this story</string>
    <string name="later">Later</string>
    <string name="rate_now">Rate Now</string>
    <!--    <string name="default_web_client_id">512054367217-hc8pq3b5iifip6mj1es1lku2ieu131a4.apps.googleusercontent.com</string>-->
</resources>