<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:title="@string/edit_chapter"
        android:id="@+id/edit_chapter"
        android:icon="@drawable/edit_add"
        app:showAsAction="always"/>
    <item android:title="@string/delete_books"
        android:id="@+id/deleteBook"
        android:icon="@drawable/delete"
        app:showAsAction="always"/>
    <item android:title="Publish Books"
        android:id="@+id/publishBooks"
        android:icon="@drawable/check"
        app:showAsAction="always"/>
    <item android:title="@string/add_chapter_show_info_book"
        android:id="@+id/add_file_books"
        android:icon="@drawable/pdf"
        app:showAsAction="always"/>

</menu>