<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <View
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="#43BD3F"/>

            <RelativeLayout
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="-75dp"
                android:background="@drawable/boder_rate"
                android:padding="20dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/round_rate" />

                <ImageView
                    android:id="@+id/rateImg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:adjustViewBounds="true"
                    android:padding="25dp"
                    android:src="@drawable/clipboard" />

            </RelativeLayout>

            <TextView
                android:layout_width="341dp"
                android:layout_height="72dp"
                android:layout_gravity="center"
                android:text="@string/select_status"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="25sp"
                android:textStyle="bold" />

            <!--                android:theme="@style/MyRatingBar" />-->
            <LinearLayout
                android:layout_width="335dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center">


                <RadioGroup
                    android:id="@+id/radiogroupStatus"
                    android:layout_width="332dp"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <RadioButton
                        android:id="@+id/completed"
                        android:layout_width="115dp"
                        android:layout_height="wrap_content"
                        android:text="@string/completed" />

                    <RadioButton
                        android:id="@+id/incomplete"
                        android:layout_width="115dp"
                        android:layout_height="wrap_content"
                        android:text="@string/incompleted" />



                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/yes_status"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/yes"
                    android:background="@drawable/boder_profile"
                    android:textColor="@color/nau"
                    android:backgroundTint="@color/blue"
                    android:textAllCaps="false" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/cancel_status"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="20dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:background="@drawable/boder_profile"
                    android:textColor="@color/nau"
                    android:backgroundTint="@color/blue"
                    android:text="@string/cancel"
                    android:textAllCaps="false" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>